# nixos

./: .cursorrules  .gitignore  .gitleaks.toml  .gitmodules  .goosehints  .markdownlintrc  .mcp.json  .pre-commit-config.yaml  .shellcheckrc  .windsurfrules  AGENTS.md  CLAUDE.md  DESIGN.md  HOTKEYS.md  README.md  SECRETS.md  STANDARDS.md  TECH_STACK.md  TODO.md  VISION.md  claude  flake.nix  install-bootloader  test-bsp-toggle.sh  test-dark-mode.sh  test-theme-cycle.sh  treefmt.toml
.claude/: settings.json  settings.local.json
.trunk/: trunk.yaml
config/: hotkeys.yaml  themectl-automation.yaml
docs/: VIM.md  desktop-environment-switching.md  github-actions.md  lan-mouse.md  nix-darwin-trackpad-options.md  pixinsight-cache.md  pixinsight.md  samba-setup.md
k8s/: README.md
lib/: hotkeys.nix
modules/: aws-root-config.nix  claude-desktop.nix  ghostty-terminfo.nix  heroku-cli.nix  local-hosts.nix  n100-disko.nix  n100-network.nix  nfs-mounts.nix  nix-caches.nix  nix-limits.nix  restic-backups.nix  rustdesk-client.nix  (+5 more)
scripts/themectl/: MANIFEST.in  README.md  pyproject.toml
scripts/themectl/contrib/: yabai-space-helper.sh
scripts/themectl/tests/: conftest.py  test_cli.py  test_hooks.py  test_macos.py  test_yabai_helper.py
scripts/themectl/themectl/: __init__.py  __main__.py  assets.py  cli.py  config.py  hooks.py  hotkeys.py  macos.py  state.py  themes.py
scripts/themectl/themectl/contrib/: __init__.py  yabai-space-helper.sh
scripts/themectl/typings/rich/: __init__.py  box.py  console.py  panel.py  table.py
scripts/themectl/typings/typer/: __init__.pyi
(+274 files in other folders)
