[project]
name = "themectl"
version = "0.1.0"
description = "Unified theme automation CLI for Omarchy/Nix hosts"
authors = [{ name = "James Brink", email = "james@brink.dev" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "tomli-w>=1.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
  "pytest-mock>=3.12.0",
]

[project.scripts]
themectl = "themectl.cli:app"

[build-system]
requires = ["flit_core>=3.9.0"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
addopts = "-q"
python_files = ["test_*.py"]
